--- a/package.json
+++ b/package.json
@@ -6,22 +6,44 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",  
+    "test": "jest",
+    "testChanged": "jest -o",
+    "testWatch": "jest -u --watchAll",
+    "testWatchChanged": "jest -u --watch"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx,ts,tsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
   },
   "dependencies": {
-    "expo": "~48.0.6",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-dom": "18.2.0",
-    "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1",
     "@expo/vector-icons": "^13.0.0",
-    "expo-image-picker": "~14.1.1"
+    "@expo/webpack-config": "^18.0.1",
+    "expo": "~48.0.6",
+    "expo-image-picker": "~14.1.1",
+    "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "~18.0.14",
+    "@types/react-test-renderer": "^18.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
