--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",  
+    "web": "expo start --web",
     "test": "jest",
     "testChanged": "jest -o",
     "testWatch": "jest --watchAll",
-    "testWatchChanged": "jest --watch"
+    "testWatchChanged": "jest --watch",
+    "lint": "eslint --ext .tsx --ext .ts .",
+    "lintFix": "eslint --ext .tsx --ext .ts . --fix"
+    
   },
   "jest": {
     "preset": "jest-expo",
@@ -44,6 +47,11 @@
     "@types/jest": "^29.4.0",
     "@types/react": "~18.0.14",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.9.4"
   },
   "private": true
